started testing insertion made sme adjustments :     -add newly created page to table     -added append to metadata.csv     -refactored de-serialize method